v. 0.1.17 - object handler and folder adjustment
