# public/swagger.json
@@ -147,6 +147,12 @@
 					"uuid": {
 						"$ref": "#/components/schemas/UUID"
 					},
+					"propertyId": {
+						"$ref": "#/components/schemas/Id"
+					},
+					"companyId": {
+						"$ref": "#/components/schemas/Id"
+					},
 					"name": {
 						"type": "string"
 					},
@@ -203,12 +209,6 @@
 					},
 					"itAspp": {
 						"type": "string"
-					},
-					"propertyId": {
-						"$ref": "#/components/schemas/Id"
-					},
-					"companyId": {
-						"$ref": "#/components/schemas/Id"
 					},
 					"createdAt": {
 						"type": "string",
